docs: update README and add comprehensive Javadoc comments
- Expand README with detailed project documentation and problem resolution
- Add Javadoc comments to 24+ Java files across multiple packages
- Document compilation instructions, features, and implementation details
- Improve code clarity and maintainability through inline documentation
- No functional code changes, documentation only